Src/Resources/KtaneWeb.css
/* ... */
    pre.diff span.del {
        background: #f88;
        text-decoration: line-through;
        padding: 0 .3em;
        margin: 0 .1em;
    }

    pre.diff span.sep {
        background: #ccf;
        font-weight: bold;
        padding: 0 .5em;
        display: block;
    }

        pre.diff span.sep::after {
            content: '...';
        }

.json-history td.commands, .json-history td.time, .json-history td.changes .module {
    white-space: nowrap;
}

/* Desktop version for narrow screens */
@media screen and (max-width: 1090px) and (min-width: 650.01px) {
    body {
        font-size: 12pt;
        max-width: none;
    }

    #logo {
        float: none;
        text-align: center;
    }

    #icons {
        float: none;
        width: 35em;
        padding-right: 10em;
        margin: -3.5em auto 5.5em;
        text-align: right;
    }

        #icons > * {
            text-align: center;
        }

    td.infos-2, th.infos {
        display: none;
    }

    td.infos-1 div.modlink-wrap {
        margin: 0;
    }

        td.infos-1 div.modlink-wrap img.mod-icon {
            float: left;
            margin: .1em .5em 0 0 !important;
        }

        td.infos-1 div.modlink-wrap a.modlink .mod-name {
            display: block;
            margin: 0;
        }

    td.infos-1 div.infos {
        padding: .1em 0;
        position: relative;
    }

    body.display-twitch td.infos-1 div.infos > .inf-twitch {
        display: inline-block !important;
    }

    td.infos-1 div.infos > div.inf-type,
    td.infos-1 div.infos > div.inf-author,
    body.display-difficulty td.infos-1 div.infos > div.inf-difficulty,
    body.display-origin td.infos-1 div.infos > div.inf-origin,
    body.display-id td.infos-1 div.infos > div.inf-id {
        display: inline;
    }

    body.display-description td.infos-1 div.infos > div.inf-description {
        display: block;
    }

    td.infos-1 div.infos > div:not(.inf-description):not(.inf-type):not(.inf-author)::before {
        content: ' • ';
    }

    td.infos-1 div.infos > div.inf-author::before {
        content: ' • by ';
    }

    td.infos-1 div.infos {
        margin-left: 3em;
    }

    body.sort-name th.infos::after {
        content: '   • sorted by name';
    }

    body.sort-defdiff th.infos::after {
        content: '   • sorted by defuser difficulty';
    }

    body.sort-expdiff th.infos::after {
        content: '   • sorted by expert difficulty';
    }

    /* Lay out the filters in a two-column way */
    #more > div.filters {
        height: 32em;
    }

        #more > div.filters > div {
            padding: 0 2.3em;
        }

    tr.mod[data-compatibility="Untested"] .mod-name, tr.mod[data-compatibility="Unplayable"] .mod-name, tr.mod[data-compatibility="Problematic"] .mod-name {
        padding-left: 3.5em;
        background-position: 2.25em 50%;
    }

    #top-controls {
        display: block;
    }

    #more > div.dev > span.dev-link {
        padding: 0;
        border: none;
        display: block;
    }
}

/* Desktop version for narrow screens — special case for wrapping the search options */
@media screen and (max-width: 740px) and (min-width: 650.01px) {
    #top-controls .search-container .search-options #search-opt-descriptions {
        display: block;
    }
}
/* ... */

